--- a/src/views/0_Components/1_NavBar/NavBar.css
+++ b/src/views/0_Components/1_NavBar/NavBar.css
@@ -1,4 +1,4 @@
-.navBar {
+#navBar {
   position: fixed;
   z-index: 10;
   height: 50px;
@@ -9,13 +9,22 @@
   transition: 150ms;
 }
 .navBar-wrapper {
-  height: 100%;
   max-width: var(--width);
   margin: 0 auto;
   box-sizing: border-box;
-  padding: 0 15px;
 }
 
-.navBar-logo {
-  height: 15px;
+.defaultNav-logoWrapper {
+  box-sizing: border-box;
+  padding: 0 15px;
 }
+.defaultNav-logo { height: 15px; }
+.defaultNav-buttonPadding { width: 50px; box-sizing: border-box; padding: 0 10px; }
+
+.searchNav-xButton { padding: 0 10px;}
+.searchNav-searchIconPadding { padding: 0 10px 0 15px; }
+.searchNav-filterIconPadding { padding: 0 15px 0 7px; }
+.searchNav-searchInput::placeholder { color: var(--black); }
+
+.chevron-left { width: 50px; box-sizing: border-box; padding-left: 8px; }
+.chevron-right { width: 50px; box-sizing: border-box; padding-right: 8px; }
