--- a/src/views/0_Components/10_Cards/Cards.css
+++ b/src/views/0_Components/10_Cards/Cards.css
@@ -1,7 +1,7 @@
-.card-heading {
+.bigCard-heading {
   box-sizing: border-box;
 }
-.card-userImage {
+.bigCard-userImage {
   height: 30px;
   width: 30px;
   min-width: 30px;
