--- a/src/views/0_Components/10_Cards/Cards.css
+++ b/src/views/0_Components/10_Cards/Cards.css
@@ -1,8 +1,33 @@
-.bigCard-heading {
+.bigCard-userHeading {
+  height: 50px;
   box-sizing: border-box;
+  padding: 0 5px;
+}
+.bigCard-buttons {
+  height: 40px;
+  position: relative;
+  z-index: 21;
+  box-sizing: border-box;
+  padding: 0 5px;
 }
 .bigCard-userImage {
   height: 30px;
   width: 30px;
   min-width: 30px;
 }
+.bigCard-foodHeading { box-sizing: border-box; padding: 0 15px; }
+.bigCard-subText { display: inline-block; box-sizing: border-box; padding-bottom: 10px; padding-right: 10px; }
+
+.bigCard-pts {
+  height: 40px;
+  width: 40px;
+  /* background-color: var(--background); */
+  color: var(--black);
+  border-radius: 15px;
+  box-sizing: border-box;
+  border: 1px solid var(--black);
+}
+.bigCard-pts:hover {
+  color: white;
+}
+.bigCard-stats { box-sizing: border-box; padding: 0 15px 20px 15px; }
