--- a/src/views/0_Components/11_List/List.css
+++ b/src/views/0_Components/11_List/List.css
@@ -2,7 +2,6 @@
   display: grid;
   grid-gap: 0;
   grid-template-columns: repeat(2, 1fr);
-  /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
   border-left: 1px solid var(--border);
   border-right: 1px solid var(--border);
   box-sizing: border-box;
@@ -17,7 +16,6 @@
   padding: 5px 7px;
 }
 
-
 .list-grid-3 {
   display: grid;
   grid-gap: 0;
@@ -25,4 +23,10 @@
   border-left: 1px solid var(--border);
   border-right: 1px solid var(--border);
   box-sizing: border-box;
+}
+.list-item-3 { border-right: 1px solid var(--border); }
+.list-item-3:nth-child(3n) { border-right: none; }
+.list-image-3 {
+  height: min(var(--width)/3, 100vmin/3);
+  width: 1fr;
 }
