--- a/src/views/2_Search/Search.css
+++ b/src/views/2_Search/Search.css
@@ -2,21 +2,9 @@
   margin: 15px;
 }
 
-/* Google Autocomplete Styles */
-.pac-container {
-  border-radius: 5px;
-  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .1);
+.filters-slider {
+  margin: 30px 20px;
 }
-.pac-container:after {
-  margin-right: 4px;
-  margin-bottom: 3px;
-}
-.pac-item {
-  font-family: 'Red Hat Text', 'Red Hat Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  box-sizing: border-box;
-  padding-left: 10px;
-  border-color: var(--border);
-}
-.pac-item:hover { cursor: pointer; background-color: var(--background); }
-.pac-icon { display: none; }
+.pts-scale { margin-right: -8px; }
+.pts-not { font-size: 12px; font-weight: 400; color: var(--mediumgray); }
+.pts-selected { font-size: 12px; font-weight: 700; color: var(--black); }
