--- a/src/views/0_Components/Other/Slider.css
+++ b/src/views/0_Components/Other/Slider.css
@@ -1,3 +1,11 @@
+.slider-wrapper {
+  margin: 30px 20px;
+}
+.pts-scale { margin-right: -8px; }
+.pts-not { font-size: 12px; font-weight: 400; color: var(--mediumgray); }
+.pts-selected { font-size: 12px; font-weight: 700; color: var(--black); }
+.slider-labels > h6 { font-size: 12px; font-weight: 400; }
+
 .rc-slider {
   position: relative;
   height: 14px;
