--- a/src/views/0_Components/6_Tags/Tags.css
+++ b/src/views/0_Components/6_Tags/Tags.css
@@ -1,21 +1,22 @@
 .react-tags {
+  min-height: 7em;
   position: relative;
   padding: 6px 0 0 6px;
-  border: 1px solid var(--border);
+  border: 1px solid var(--black);
   border-radius: 5px;
   background-color: white;
 
   /* shared font styles */
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.2;
 
   /* clicking anywhere will focus the input */
   cursor: text;
-  transition: 150ms all;
+  transition: 150ms;
 }
 
 .react-tags.is-focused {
-  border-color: var(--black);
+  box-shadow: 0 0 0 1pt var(--black);
 }
 
 .react-tags__selected {
@@ -28,17 +29,18 @@
   margin: 0 6px 6px 0 !important;
   padding: 6px 8px !important;
   border: 1px solid var(--border) !important;
-  border-radius: 2px;
+  border-radius: 5px;
   background: var(--background);
 
   /* match the font styles */
   font-size: inherit;
   line-height: inherit;
+  color: var(--gray);
 }
 
 .react-tags__selected-tag:after {
   content: '\2715';
-  color: #AAA;
+  color: var(--mediumgray);
   margin-left: 8px;
 }
 
@@ -92,16 +94,14 @@
   position: absolute;
   z-index: 1;
   top: 100%;
-  left: -5px;
+  left: 0;
   width: 100%;
 }
 
 @media screen and (min-width: 30em) {
-
   .react-tags__suggestions {
     width: 200px;
   }
-
 }
 
 .react-tags__suggestions ul {
@@ -109,14 +109,18 @@
   padding: 0;
   list-style: none;
   background: white;
-  border: 1px solid #D1D1D1;
-  border-radius: 2px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  border: 1px solid var(--border);
+  border-radius: 5px;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .1);
+  overflow: hidden;
 }
 
 .react-tags__suggestions li {
   border-bottom: 1px solid #ddd;
   padding: 6px 8px;
+}
+.react-tags__suggestions li:last-child {
+  border: none;
 }
 
 .react-tags__suggestions li mark {
@@ -127,11 +131,11 @@
 
 .react-tags__suggestions li:hover {
   cursor: pointer;
-  background: #eee;
+  background: var(--background);
 }
 
 .react-tags__suggestions li.is-active {
-  background: #b7cfe0;
+  background: var(--background);
 }
 
 .react-tags__suggestions li.is-disabled {
