--- a/src/views/0_Components/1_NavBar/NavBar.css
+++ b/src/views/0_Components/1_NavBar/NavBar.css
@@ -1,4 +1,4 @@
-.navBar {
+#navBar {
   position: fixed;
   z-index: 100;
   height: 50px;
@@ -6,6 +6,12 @@
   box-sizing: border-box;
   border-bottom: 1px solid var(--border);
   background-color: white;
+  transition: 150ms;
+  will-change: transform;
+}
+.navBar-hide {
+  transform: translateY(-50px);
+  -webkit-transform: translateY(-50px);
 }
 .navBar-wrapper {
   max-width: var(--width);
