--- a/src/views/0_Components/6_Tags/Tags.css
+++ b/src/views/0_Components/6_Tags/Tags.css
@@ -2,7 +2,7 @@
   min-height: 7em;
   position: relative;
   padding: 6px 0 0 6px;
-  border: 1px solid var(--black);
+  border: 1px solid var(--border);
   border-radius: 5px;
   background-color: white;
 
@@ -15,9 +15,7 @@
   transition: 150ms;
 }
 
-.react-tags.is-focused {
-  box-shadow: 0 0 0 1pt var(--black);
-}
+.is-focused { box-shadow: 0 0 0 2pt rgb(241, 241, 241); }
 
 .react-tags__selected {
   display: inline;
