--- a/src/views/0_Components/10_Cards/Cards.css
+++ b/src/views/0_Components/10_Cards/Cards.css
@@ -30,10 +30,26 @@
 .card-pts {
   height: 40px;
   width: 40px;
-  /* background-color: var(--background); */
   color: var(--black);
   border-radius: 15px;
   box-sizing: border-box;
   border: 1px solid var(--black);
 }
 .card-stats { box-sizing: border-box; padding: 0 15px 20px 15px; }
+
+.card-pts-small {
+  height: 20px;
+  width: 20px;
+  color: var(--black);
+  border-radius: 7px;
+  box-sizing: border-box;
+  border: 1px solid var(--black);
+}
+.card-pts-medium {
+  height: 25px;
+  width: 25px;
+  color: var(--black);
+  border-radius: 9px;
+  box-sizing: border-box;
+  border: 1px solid var(--black);
+}
