--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --lightblue: #549DF9;
   --blue: #1555f5;
   --darkblue: #0d2085;
-  --red: #da3856;
+  --red: #ff5a60;
   --green: #35ffbb;
   --gold: #caa847;
 
