--- a/src/views/9_Login/Login.css
+++ b/src/views/9_Login/Login.css
@@ -4,3 +4,9 @@
   box-sizing: border-box;
   padding: 0 30px;
 }
+
+.login-google {
+  height: 40px;
+  background-color: white;
+  border-radius: 5px;
+}
