--- a/src/views/5_Account/Account.css
+++ b/src/views/5_Account/Account.css
@@ -13,3 +13,6 @@
   margin: 0 0 3px 15px;
 }
 .settingss-padding-10 { box-sizing: border-box; padding: 10px;}
+
+.settings-logout { color: var(--red); }
+.settings-logout:hover { color: var(--red); }
