Add API Calls to Search and Home

--- a/src/views/0_Components/2_TabBar/TabBar.css
+++ b/src/views/0_Components/2_TabBar/TabBar.css
@@ -36,10 +36,10 @@
 .tabBar-fillUser { fill: var(--black); stroke-linecap: butt; }
 .tabBar-fillHome {
   position: absolute;
+  bottom: 11px;
   z-index: 101;
   height: 12px;
   width: 4px;
-  margin-top: 7px;
   background-color: white;
 }
 .tabBar-homeWidth {
