--- a/src/views/0_Components/Other/AutoSearch.css
+++ b/src/views/0_Components/Other/AutoSearch.css
@@ -1,4 +1,5 @@
 .predictions-container {
+  max-height: 200px;
   width: 100%;
   border-radius: 5px;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .1);
@@ -7,7 +8,8 @@
   z-index: 2;
   border: 1px solid var(--border);
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .predictions-button {
   width: 100%;
