Finish most API endpoints, only comments remaining

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --darkblue: #0d2085;
   --red: #ff5a60;
   --green: #35ffbb;
-  --gold: #caa847;
+  --gold: #f1c40f;
 
   --width: 600px;
   --padding: 15px;
