--- a/src/views/0_Components/10_Cards/Cards.css
+++ b/src/views/0_Components/10_Cards/Cards.css
@@ -59,7 +59,7 @@
 
 .card-list-bottom {
   box-sizing: border-box;
-  padding: 0 5px 15px 15px;
+  padding: 10px 0 10px 10px;
 }
 
 .card-follow-margin {
