--- a/src/box.css
+++ b/src/box.css
@@ -120,9 +120,9 @@
 }
 
 /* Square */
-.box-box { height: var(--width); background-color: var(--background); }
-@media only screen and (max-width: 600px) {
-  .box-box { height: 100vmin; }
+.box-box { height: 100vmin; background-color: var(--background); }
+@media only screen and (min-width: 600px) {
+  .box-box { height: var(--width); }
 }
 
 /* Input */
