--- a/src/index.css
+++ b/src/index.css
@@ -119,4 +119,6 @@ img {
   -o-user-drag: none;
 }
 
-ul { margin: 0; padding: 0; }
+ul { margin: 0 0 0 15px; padding: 0; }
+ol { margin: 0 0 0 15px; padding: 0; }
+iframe { border: none; margin: 0; }
